--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "emailjs-com": "^3.2.0",
     "next": "12.0.7",
+    "quagga": "^0.12.1",
     "react": "17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
-    "react-multi-carousel": "^2.6.5",
     "swiper": "^7.4.1"
   },
   "devDependencies": {
